--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.application.name=dicoveryservice
+spring.application.name=discoveryservice
 server.port=8010
 eureka.instance.hostname=localhost
 eureka.client.register-with-eureka=false
-eureka.client.service-url.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/eureka
 
